--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,10 +19,10 @@
             <button type="submit">Generate shortid</button>
         </form>
     </div>
+<br><br>
 
-    
     <div><% if (locals.urls) { %>
-    <table>
+    <table border="1">
         <tr><th>S no.</th>
             <th>Short Id</th>
             <th>RedirectURL</th>
